fix alignment issues

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -427,7 +427,7 @@ button.primary:hover span:after {
   padding-top: 120px;
   border-color: #51515A;
   padding-bottom: 120px;
-  height: 100vh;
+  height: 150vh;
 }
 
 .home-container1 {
